--- a/osptest/prj_linux/makefile_linux_d
+++ b/osptest/prj_linux/makefile_linux_d
@@ -30,7 +30,7 @@ PWLIB_SUPPORT = 0
 CFLAGS += -m32
 LDFLAGS += -m32
 
-OBJS := $(SRC_DIR)/main
+OBJS := $(SRC_DIR)/server
 
 ## Libraries to include in shared object file
 
